// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm should render correctly with allowChangePassword and loginError temporary password 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1 />
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <input
      name="newPassword"
      placeholder="New Password"
      required=""
      type="password"
      value=""
    />
    <div
      class="login__error"
    >
      temporary password
    </div>
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;

exports[`LoginForm should render correctly without params 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1 />
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;
